--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ li {
 }
 
 a {
-  color: orange;
+  color: rgb(0, 0, 0);
   text-decoration: none;
 }
 
@@ -81,9 +81,11 @@ section {
 
 /* ====================== Navigation ====================== */
 nav {
+  display: flex;
   width: 100%;
-  height: 80px;
-  background-color: #252831;
+  height: 80%;
+  padding: 20px;
+  background-color: #e00000;
   text-align: center;
 }
 
@@ -114,7 +116,7 @@ nav h1 a {
 }
 
 /* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li + li:before {
+#breadcrumb li+li:before {
   padding: 8px;
   color: black;
   content: "/\00a0";
@@ -160,7 +162,7 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial, sans-serif;
-  font-size: 11pt;
+  font-size: 1.1em;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -188,7 +190,7 @@ nav h1 a {
   border: 2px solid #ccc;
   font-family: Arial, sans-serif;
   margin: 15px;
-  min-height: 80px;
+  min-height: 380px;
   padding: 0;
   text-align: center;
   width: 370px;
@@ -208,12 +210,14 @@ nav h1 a {
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial, sans-serif;
-  font-size: 14pt;
+  font-size: 1.4em;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
+  padding: 0 20px;
+
 }
 
 #restaurants-list p {
@@ -222,7 +226,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-  background-color: orange;
+  background-color: rgb(241, 1, 1);
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -235,38 +239,39 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header {
-  position: fixed;
-  top: 0;
+
+.inside {
+  display: flex;
+  flex-flow: row wrap;
   width: 100%;
-  z-index: 1000;
+}
+
+.inside header {
+  width: 100%;
 }
 
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  height: 280px;
+  position: relative;
+  width: 100%;
 }
 
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
+  border: 1px solid black;
 }
 
 .inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
+  width: 100%;
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #ff0404;
   font-family: Arial, sans-serif;
-  font-size: 20pt;
+  font-size: 2.0em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -275,33 +280,36 @@ nav h1 a {
 }
 
 #restaurant-img {
-  width: 90%;
+  width: 100%;
+  border: 1px solid black;
 }
 
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 1.2em;
   margin: 10px 0px;
 }
 
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 1.2rem;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-  width: 90%;
+
 }
 
 #restaurant-container,
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 40px 35px;
+  width: 100%;
+  margin: 10px;
+  position: relative;
 }
 
 #reviews-container {
@@ -309,8 +317,8 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
+  color: #e20000;
+  font-size: 2.4rem;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
@@ -323,20 +331,97 @@ nav h1 a {
 
 #reviews-list li {
   background-color: #fff;
-  border: 2px solid #f3f3f3;
+  border: 1px solid #000000;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 20px 20px;
   position: relative;
-  width: 85%;
 }
 
 #reviews-list li p {
   margin: 0 0 10px;
+  padding: 10px;
 }
 
 #restaurant-hours td {
   color: #666;
+}
+
+/* --------- Media Queries -------- */
+
+@media (min-width: 458px) {
+  .filter-options {
+    text-align: left;
+  }
+}
+
+@media (min-width: 630px) and (max-width: 930px) {
+  #restaurants-list li {
+    max-width: 40%;
+  }
+
+  #restaurants-list li h1 {
+    height: 30px;
+  }
+}
+
+@media (min-width: 930px) {
+  #restaurants-list li {
+    max-width: 30%;
+  }
+
+  #restaurants-list p {
+    width: 70%;
+  }
+
+  #restaurants-list li h1 {
+    height: 35px;
+  }
+
+  .inside header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+
+  .inside #map-container {
+    background: blue none repeat scroll 0 0;
+    height: 88%;
+    position: fixed;
+    right: 0;
+    top: 80px;
+    width: 50%;
+  }
+
+  #restaurant-img {
+    width: 85%;
+  }
+
+  #restaurant-container {
+    width: 45%;
+    padding: 150px 50px 30px;
+  }
+
+  #reviews-container {
+    width: 45%;
+    padding: 40px 40px;
+  }
+
+  #restaurant-cuisine {
+    width: 85%;
+  }
+
+  #reviews-list li {
+    width: 85%;
+  }
+
+  .inside #footer {
+    bottom: 0;
+    position: absolute;
+    width: 45%;
+  }
+
 }
