--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ td,
 th,
 p {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
+  font-size: 1.1rem;
   color: #333;
   line-height: 1.5;
 }
@@ -15,6 +15,7 @@ body {
   background-color: #fff8f8;
   margin: 0;
   position: relative;
+  padding: 0;
 }
 
 ul,
@@ -46,7 +47,7 @@ h4,
 h5,
 h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  margin: 0;
 }
 
 article,
@@ -65,7 +66,7 @@ section {
 }
 
 #maincontent {
-  background-color: #fde6e6;
+  background-color: #fff8f8;
   min-height: 100%;
 }
 
@@ -81,11 +82,10 @@ section {
 
 /* ====================== Navigation ====================== */
 nav {
-  display: flex;
   width: 100%;
   height: 80%;
-  padding: 20px;
-  background-color: #e00000;
+  padding: 5px;
+  background-color: #424242;
   text-align: center;
 }
 
@@ -95,42 +95,43 @@ nav h1 {
 
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
-  font-weight: 200;
+  font-size: 1.4rem;
+  font-weight: 300;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
 
 #breadcrumb {
-  padding: 10px 40px 16px;
+  padding: 5px 5px;
   list-style: none;
-  background-color: #eee;
-  font-size: 17px;
+  background-color: #424242;
+  font-size: 1.7rem;
   margin: 0;
-  width: calc(50% - 80px);
+  font-style: bold;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
   display: inline;
+  color: #fff8f8;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li+li:before {
-  padding: 8px;
-  color: black;
+#breadcrumb li + li:before {
+  padding: 3px;
+  color: #fff8f8;
   content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-  color: #0275d8;
+  color: white;
   text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-  color: #01447e;
+  color: #424242;
   text-decoration: underline;
 }
 
@@ -138,20 +139,20 @@ nav h1 a {
 #map {
   height: 400px;
   width: 100%;
-  background-color: #ccc;
+  background-color: #fff8f8;
 }
 
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
   height: 100%;
-  background-color: #3397db;
+  background-color: #424242;
   align-items: center;
   padding: 10px;
 }
 
 .filter-options h2 {
-  color: white;
+  color: #fff8f8;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
@@ -159,7 +160,7 @@ nav h1 a {
 }
 
 .filter-options select {
-  background-color: white;
+  background-color: #fff8f8;
   border: 1px solid #fff;
   font-family: Arial, sans-serif;
   font-size: 1.1em;
@@ -176,7 +177,7 @@ nav h1 a {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-  background-color: #f3f3f3;
+  background-color: #fff8f8;
   list-style: outside none none;
   margin: 0;
   padding: 30px 15px 60px;
@@ -186,7 +187,7 @@ nav h1 a {
 #restaurants-list li {
   display: flex;
   flex-direction: column;
-  background-color: #fff;
+  background-color: #fff8f8;
   border: 2px solid #ccc;
   font-family: Arial, sans-serif;
   margin: 15px;
@@ -217,7 +218,6 @@ nav h1 a {
   margin: 20px 0 10px;
   text-transform: uppercase;
   padding: 0 20px;
-
 }
 
 #restaurants-list p {
@@ -226,7 +226,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-  background-color: rgb(241, 1, 1);
+  background-color: #424242;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -243,7 +243,10 @@ nav h1 a {
 .inside {
   display: flex;
   flex-flow: row wrap;
-  width: 100%;
+  width: auto;
+  height: auto;
+  margin: auto;
+  min-width: 320px;
 }
 
 .inside header {
@@ -251,27 +254,32 @@ nav h1 a {
 }
 
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
+  background: #424242 none repeat scroll 0 0;
   height: 280px;
   position: relative;
-  width: 100%;
+  margin: auto;
 }
 
 .inside #map {
   background-color: #ccc;
   height: 100%;
-  width: 100%;
+  width: auto;
   border: 1px solid black;
+  margin: auto;
 }
 
 .inside #footer {
   width: 100%;
 }
 
+.inside #footer strong {
+  color: yellow;
+}
+
 #restaurant-name {
-  color: #ff0404;
+  color: #424242;
   font-family: Arial, sans-serif;
-  font-size: 2.0em;
+  font-size: 2em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -280,26 +288,15 @@ nav h1 a {
 }
 
 #restaurant-img {
+  margin: auto;
   width: 100%;
+  align-self: center;
   border: 1px solid black;
 }
 
 #restaurant-address {
   font-size: 1.2em;
   margin: 10px 0px;
-}
-
-#restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
-  font-size: 1.2rem;
-  font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 2px 0;
-  text-align: center;
-  text-transform: uppercase;
-
 }
 
 #restaurant-container,
@@ -312,16 +309,21 @@ nav h1 a {
   position: relative;
 }
 
-#reviews-container {
-  padding: 30px 40px 80px;
+#restaurant-cuisine,
+#reviews-container h2 {
+  background-color: #333;
+  color: #ddd;
+  font-size: 1.2rem;
+  font-weight: 300;
+  letter-spacing: 10px;
+  margin: 0 0 20px;
+  padding: 2px 0;
+  text-align: center;
+  text-transform: uppercase;
 }
 
-#reviews-container h2 {
-  color: #e20000;
-  font-size: 2.4rem;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+#reviews-container {
+  padding: 10px;
 }
 
 #reviews-list {
@@ -347,6 +349,19 @@ nav h1 a {
 
 #restaurant-hours td {
   color: #666;
+  background-color: #fff;
+  font-size: 1.1rem;
+  font-weight: 300;
+  padding: 2px 2px;
+}
+
+#restaurant-hours td:nth-of-type(2) {
+  font-style: italic;
+  width: auto;
+}
+
+#restaurant-hours {
+  border: 2px solid #666;
 }
 
 /* --------- Media Queries -------- */
@@ -355,15 +370,32 @@ nav h1 a {
   .filter-options {
     text-align: left;
   }
+
+  #restaurant-container {
+    flex-flow: column;
+  }
 }
 
 @media (min-width: 630px) and (max-width: 930px) {
+  #restaurant-container {
+    flex-flow: column;
+  }
+
   #restaurants-list li {
     max-width: 40%;
   }
 
   #restaurants-list li h1 {
     height: 30px;
+  }
+
+  #restaurant-hours {
+    border: 2px solid #666;
+    width: 95%;
+  }
+
+  .inside #map-container {
+    top: 30px;
   }
 }
 
@@ -388,16 +420,15 @@ nav h1 a {
   }
 
   .inside #map-container {
-    background: blue none repeat scroll 0 0;
-    height: 88%;
+    height: 70%;
     position: fixed;
-    right: 0;
-    top: 80px;
-    width: 50%;
+    right: 30px;
+    top: 130px;
+    width: 45%;
   }
 
   #restaurant-img {
-    width: 85%;
+    width: 95%;
   }
 
   #restaurant-container {
@@ -411,17 +442,21 @@ nav h1 a {
   }
 
   #restaurant-cuisine {
-    width: 85%;
+    width: 95%;
   }
 
   #reviews-list li {
-    width: 85%;
+    width: 93%;
   }
 
   .inside #footer {
     bottom: 0;
     position: absolute;
-    width: 45%;
+    width: 100%;
   }
 
+  #restaurant-hours {
+    border: 2px solid #666;
+    width: 95%;
+  }
 }
