--- a/css/styles.css
+++ b/css/styles.css
@@ -29,13 +29,14 @@ li {
 }
 
 a {
-  color: rgb(0, 0, 0);
+  color: #ff9292;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #3397db;
+  /* color: #3397db; */
+  color: #d85c3a;
   text-decoration: none;
 }
 
@@ -75,7 +76,7 @@ section {
 
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #ccc;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -235,11 +236,11 @@ nav h1 a {
 }
 
 #restaurants-list p {
-  margin: 0;
-  font-size: 11pt;
+  margin: auto;
+  font-size: 1.1em;
 }
 
-#restaurants-list li a {
+/* #restaurants-list li a {
   background-color: #424242;
   border-bottom: 3px solid #eee;
   color: #fff;
@@ -250,6 +251,22 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+} */
+
+#restaurants-list li button {
+  background-color: rgb(190, 58, 58);
+  color: #fff;
+  padding: 15px 30px;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 20px;
+  font-size: 0.9em;
+  border-radius: 4px;
+}
+
+#restaurants-list li button:hover {
+  color: #ff9292;
+  cursor: pointer;
 }
 
 /* ====================== Restaurant Details ====================== */
